tests/types/result/errors/test_err_wrong_ok_type.sushi
# Tests error for wrong Ok type
# EXPECT_ERROR_CODE: CE2031

enum MyError:
    Error

fn test_func() i32 | MyError:
    return Result.Ok("string")

fn main() i32:
    return Result.Ok(0)
